--- a/node-backend/.env
+++ b/node-backend/.env
@@ -1,2 +1,3 @@
 ATLAS_URI = mongodb+srv://dbweb:root@clusterweb-fivht.mongodb.net/test?retryWrites=true&w=majority
 TOKEN = huihlkjl4ç_ 
+NOMICS_KEY = bab83577b5d150047f3c3e754aadda14
