--- a/node-backend/.env
+++ b/node-backend/.env
@@ -1,3 +1,4 @@
 ATLAS_URI = mongodb+srv://dbweb:root@clusterweb-fivht.mongodb.net/test?retryWrites=true&w=majority
 TOKEN = huihlkjl4ç_ 
 NOMICS_KEY = bab83577b5d150047f3c3e754aadda14
+API_KEY = 2E93166F-1B89-47C5-BA02-A9E8AF89222F
